feat: 尝试引入 cli 工具进行处理

--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "grep": "ast-grep --help"
+    "grep": "ast-grep scan"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ast-grep/cli": "^0.24.1"
+    "@ast-grep/cli": "^0.24.1",
+    "@ast-grep/napi": "^0.28.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.5"
   }
 }
