--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ant-design-vue-codemod",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "description": "Ant Design Vue codemod tools",
   "main": "index.js",
   "scripts": {
